Add basic tests and update docs

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "dustland",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Wasteland-style browser RPG with a CRT vibe",
   "main": "dustland-core.js",
   "scripts": {
-    "test": "echo 'No tests specified'"
+    "test": "node --test"
   },
   "author": "",
   "license": "MIT"
