--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "test": "node --test"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jsdom": "^26.1.0"
+  }
 }
