--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "serve": "http-server -p 8080",
     "test": "node --test",
     "test:balance": "node --test test/balance-tester.test.js",
-    "test:puppeteer": "node --test test/puppeteer-runner.test.js"
+    "test:puppeteer": "node --test test/puppeteer-runner.test.js",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^8.57.1",
     "http-server": "^14.1.1",
     "jsdom": "^26.1.0",
     "puppeteer": "^22.15.0"
