--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,16 @@
     "node": true,
     "es2021": true
   },
+  "extends": "eslint:recommended",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "rules": {
     "no-undef": "off",
+    "no-unused-vars": "off",
+    "no-inner-declarations": "off",
+    "no-cond-assign": "off",
     "semi": ["error", "always"]
   }
 }
