--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  page_build:
 
 permissions:
   contents: write
@@ -15,7 +16,7 @@ concurrency:
 
 jobs:
   build:
-    if: "!startsWith(github.event.head_commit.message, 'chore: bump version')"
+    if: github.event_name != 'push' || !startsWith(github.event.head_commit.message, 'chore: bump version')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -30,4 +31,4 @@ jobs:
       - run: node scripts/presubmit.js
       - run: npm run lint
       - run: node scripts/version-bump.js
-        if: github.event_name == 'push'
+        if: github.event_name == 'page_build'
