--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,9 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
-    if: ${{ github.event_name != 'push' || !startsWith(github.event.head_commit.message, 'chore: bump version') }}
-    runs-on: ubuntu-latest
+    build:
+      if: "${{ github.event_name != 'push' || !startsWith(github.event.head_commit.message, 'chore: bump version') }}"
+      runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
