--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "es2021": true
   },
   "extends": "eslint:recommended",
+  "plugins": ["jsdoc"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
@@ -14,6 +15,7 @@
     "no-unused-vars": "off",
     "no-inner-declarations": "off",
     "no-cond-assign": "off",
-    "semi": ["error", "always"]
+    "semi": ["error", "always"],
+    "jsdoc/check-types": "error"
   }
 }
