--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^8.57.1",
+    "eslint-plugin-jsdoc": "^48.0.3",
     "http-server": "^14.1.1",
     "jsdom": "^26.1.0",
     "puppeteer": "^24.17.0",
     "ws": "^8.18.3",
-    "yaml-lint": "^1.7.0",
-    "eslint-plugin-jsdoc": "^48.0.3"
+    "yaml-lint": "^1.7.0"
   }
 }
