print some debug info in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,15 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  event-info:
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          echo "event_name=${{ github.event_name }}"
+          echo "head_commit_message=${{ github.event.head_commit.message || '' }}"
+
   build:
+    needs: event-info
     if: >-
       ${{ github.event_name != 'page_build' &&
           (github.event_name != 'push' ||
