--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,6 @@ name: CI
     branches: [main]
   pull_request:
     branches: [main]
-  page_build:
 
 permissions:
   contents: write
@@ -16,22 +15,13 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  event-info:
-    runs-on: ubuntu-latest
-    steps:
-      - run: |
-          echo "event_name=${{ github.event_name }}"
-          echo "head_commit_message=${{ github.event.head_commit.message || '' }}"
-
   build:
-    needs: event-info
     if: >-
-      ${{ github.event_name != 'page_build' &&
-          (github.event_name != 'push' ||
-           !startsWith(
-             github.event.head_commit.message,
-             'chore: bump version'
-           )) }}
+      ${{ github.event_name != 'push' ||
+          !startsWith(
+            github.event.head_commit.message,
+            'chore: bump version'
+          ) }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -46,14 +36,3 @@ jobs:
       - run: node scripts/supporting/presubmit.js
       - run: npm run lint
 
-  version-bump:
-    if: github.event_name == 'page_build'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      - run: node scripts/supporting/version-bump.js
