fix: redesign multiplayer link exchange for browsers

--- a/package.json
+++ b/package.json
@@ -21,7 +21,5 @@
     "puppeteer": "^24.17.0",
     "yaml-lint": "^1.7.0"
   },
-  "optionalDependencies": {
-    "ws": "^8.18.3"
-  }
+  "optionalDependencies": {}
 }
