--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-jsdoc": "^48.0.3",
     "http-server": "^14.1.1",
     "jsdom": "^26.1.0",
+    "@types/node": "^22.7.5",
     "puppeteer": "^24.17.0",
     "typescript": "~5.5.4",
     "yaml-lint": "^1.7.0"
