--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "strict": false,
     "noEmitOnError": false,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["DOM", "DOM.Iterable", "ES2020"]
+    "lib": ["DOM", "DOM.Iterable", "ES2020"],
+    "noUnusedParameters": true
   },
   "include": [
     "ts-src/**/*.ts",
