--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "skipLibCheck": true,
     "strict": false,
     "noUnusedLocals": true,
+    "noImplicitOverride": true,
     "noEmitOnError": false,
     "forceConsistentCasingInFileNames": true,
     "lib": ["DOM", "DOM.Iterable", "ES2020"],
