--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,8 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
       - name: Create Firebase config
         env:
           FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
@@ -51,6 +53,12 @@ jobs:
             "measurementId": "${FIREBASE_MEASUREMENT_ID}"
           }
           EOF
+      - name: Deploy Firestore rules
+        env:
+          FIREBASE_DEPLOY_TOKEN: ${{ secrets.FIREBASE_DEPLOY_TOKEN }}
+          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+        run: |
+          firebase deploy --only firestore:rules --project "$FIREBASE_PROJECT_ID" --token "$FIREBASE_DEPLOY_TOKEN" --non-interactive
       - name: Bump version
         run: node scripts/supporting/version-bump.js
       - name: Setup Pages
